--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "http://trivium-bit.github.io/portfolio",
+  "homepage": "https://trivium-bit.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
