--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-particles-js": "^3.6.0",
+    "react-particles-js": "2.4.0",
     "react-scripts": "4.0.3",
     "sass": "^1.51.0",
     "web-vitals": "^1.0.1"
