--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "2.4.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
     "sass": "^1.51.0",
     "web-vitals": "^1.0.1"
