--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-particles-js": "2.4.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "react-tilt": "^0.1.4",
     "react-typing-effect": "^2.0.5",
     "sass": "^1.51.0",
     "web-vitals": "^1.0.1"
