--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-parallax-tilt": "^1.7.63",
     "react-particles-js": "2.4.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
-    "react-tilt": "^0.1.4",
+    "react-scroll": "^1.8.7",
     "react-typing-effect": "^2.0.5",
     "sass": "^1.51.0",
     "web-vitals": "^1.0.1"
